--- a/style/style.css
+++ b/style/style.css
@@ -57,6 +57,10 @@ li span {
     padding: 10px;
     margin: 10px;
 }
+.info {
+    background-color: #c0dce7;
+    border: 2px solid #8a96bd;
+}
 .perkbtn {
     border-radius: 15px;
     color: darkred;
@@ -81,6 +85,10 @@ th, td {
     width: 95%;
     border-radius: 15px;
 }
-#hitpoints {
+.redtext {
     color: darkred;
+}
+iframe {
+    width: 100%;
+    height: 90vh;
 }
